# route_manager

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: add.rs  delete.rs  find_route.rs  list.rs  listen.rs  listen_async.rs
src/: lib.rs
src/common/: mod.rs
src/linux/: async_route.rs  mod.rs
src/unix/: mod.rs  shutdown.rs
src/unix/async_route/: async_io.rs  mod.rs  tokio.rs
src/unix_bsd/: async_route.rs  bind.rs  freebsd_bindings.rs  macos_bindings.rs  mod.rs  netbsd_bindings.rs  openbsd_bindings.rs
src/windows/: async_route.rs  ffi.rs  mod.rs
